tests/errors/inline_fn_pack.ki
var a = 1
var b = 2
var f = Function(): return a, b
